Bug 323195 - XPCAutoUnlock messes with detection of potential deadlocks, patch by Matthew Gertner, r=brendan